3.2/mule-user-guide/transports-reference.adoc
= Available Transports

[WARNING]
*This topic relates to the most recent version of Mule ESB* +
To see the corresponding topic in a previous version of Mule ESB, click http://www.mulesoft.org/documentation/display/MULE2USER/Available+Transports[here]

Following is a list of known transports (also called "providers") for Mule ESB. Some functionality is contained within modules instead of transports--see link:/documentation-3.2/display/32X/Modules+Reference[Modules Reference]. For more information on transports, see the following topics:

* link:/documentation-3.2/display/32X/Connecting+Using+Transports[About Transports]
* link:/documentation-3.2/display/32X/Configuring+a+Transport[Configuring a Transport]
* link:/documentation-3.2/display/32X/Creating+Transports[Creating Transports]

If you have created a transport for Mule and would like to share it with the Mule community, please mailto:dev@mule.codehaus.org[contact us].

The following list includes some prominent transports from MuleForge (denoted by image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"]). Transports that are available only in Mule Enterprise are denoted by #Unable to render embedded object: File (eetiny.png) not found.#.

Note that in Mule 3, CXF and Jersey are no longer classed as transports. They are now modules that use an underlying transport (for instance HTTP or HTTPS) to communicate between client ans service.

== Mule Transports

[cols=",",options="header",]
|===
|Transport |Description
|link:/documentation-3.2/display/32X/AJAX+Transport+Reference[AJAX Transport] |The Mule AJAX connector allows Mule events to be sent and received asynchronously to and from the web browser
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/ABDERA/Home[Abdera Transport] |Allows you to easily integrate with Atom feeds and Atom Publishing Protocol servers via the http://incubator.apache.org/abdera[Apache Abdera] project.
|link:/documentation-3.2/display/32X/EJB+Transport+Reference[EJB Transport] |Allows EJB invocations to be made using outbound endpoints.
|link:/documentation-3.2/display/32X/Email+Transport+Reference[Email Transport] |This transport supplies various email connectivity options.
|link:/documentation-3.2/display/32X/File+Transport+Reference[File Transport] |This transport allows files to be read and written to directories on the local file system. The connector can be configured to filter the file it reads and the way files are written, such as whether binary output is used or the file is appended to.
|link:/documentation-3.2/display/32X/FTP+Transport+Reference[FTP Transport] |Allows files to be read / written to a remote FTP server.
|link:/documentation-3.2/display/32X/HTTP+Transport+Reference[HTTP Transport] |This transport supplies HTTP transport of Mule messages between applications and other Mule servers.
|link:/documentation-3.2/display/32X/HTTPS+Transport+Reference[HTTPS Transport] |A secure version of the HTTP transport.
|link:/documentation-3.2/display/32X/IMAP+Transport+Reference[IMAP Transport] |Connectivity to IMAP mail folders.
|link:/documentation-3.2/display/32X/IMAP+Transport+Reference[IMAPS Transport] |A secure version of the IMAP transport.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] #[JCR Transport]# |A transport that reads from, writes to, and observes JCR 1.0 containers. This transport is available on MuleForge.
|#Unable to render embedded object: File (eetiny.png) not found.# link:/documentation-3.2/display/32X/JDBC+Transport+Reference[JDBC Transport] |A transport for JDBC connectivity. Some of its features are available only in Mule Enterprise.
|link:/documentation-3.2/display/32X/Jetty+Transport+Reference[Jetty Transport] |Provides support for exposing services over HTTP by embedding a light-weight Jetty server. For inbound endpoints only.
|link:/documentation-3.2/display/32X/Jetty+SSL+Transport[Jetty SSL Transport] |A secure version of the Jetty transport.
|link:/documentation-3.2/display/32X/JMS+Transport+Reference[JMS Transport] |A Mule transport for JMS connectivity. Mule itself is not a JMS server but can use the services of any JMS 1.1 or 1.02b compliant server such as ActiveMQ and OpenJms, and commercial vendors such as Weblogic, SonicMQ, and more.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LDAP[LDAP Transport] |Allows you to send and receive Mule Messages to/from an LDAP directory.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LEGSTAR/Home[Legs4Mule Transport] |Provides transformers and connectors for IBM mainframes.
|link:/documentation-3.2/display/32X/POP3+Transport+Reference[POP3 Transport] |Connectivity to POP3 inboxes.
|link:/documentation-3.2/display/32X/POP3+Transport+Reference[POP3S Transport] |A secure version of the POP3 transport.
|link:/documentation-3.2/display/32X/Quartz+Transport+Reference[Quartz Transport] |Provides scheduling facilities with cron / interval definitions and allows Mule events to be scheduled/rescheduled.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/RESTLET/Home[Restlet Transport] |Allows you to embed Restlet services inside of Mule, use the Restlet client API over Mule, and use URI templates to route messages inside of Mule.

|link:/documentation-3.2/display/32X/RMI+Transport+Reference[RMI Transport] |Enables events to be sent and received over RMI via JRMP.
|link:/documentation-3.2/display/32X/Servlet+Transport+Reference[Servlet Transport] |Provides facilities for Mule components to listen for events received via a servlet request. There is also a servlet implementation that uses the Servlet transport to enable REST style services access. This transport is now bundled with the HTTP transport.
|link:/documentation-3.2/display/32X/SMTP+Transport+Reference[SMTP Transport] |Connectivity to SMTP servers.
|link:/documentation-3.2/display/32X/SMTP+Transport+Reference[SMTPS Transport] |A secure version of the SMTP transport.
|link:/documentation-3.2/display/32X/SSL+and+TLS+Transports+Reference[SSL Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/documentation-3.2/display/32X/STDIO+Transport+Reference[STDIO Transport] |This transport provides connectivity to streams such as `System.in` and `System.out` and is useful for testing.
|link:/documentation-3.2/display/32X/TCP+Transport+Reference[TCP Transport] |Enables events to be sent and received over TCP sockets.
|link:/documentation-3.2/display/32X/SSL+and+TLS+Transports+Reference[TLS Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/documentation-3.2/display/32X/UDP+Transport+Reference[UDP Transport] |Enables events to be sent and received as datagram packets.
|link:/documentation-3.2/display/32X/VM+Transport+Reference[VM Transport] |Enables event sending and receiving over VM, embedded memory, or persistent queues.
|#Unable to render embedded object: File (eetiny.png) not found.# link:/documentation-3.2/display/32X/Mule+WMQ+Transport+Reference[WebSphere MQ Transport] |A Mule transport for WebSphere MQ. This transport is available with Mule Enterprise version 1.6 and later.
|link:/documentation-3.2/display/32X/WSDL+Connectors[WSDL Connectors] |The #[CXF Module]# allows remote web services to be invoked using their WSDL contract.
|link:/documentation-3.2/display/32X/XMPP+Transport+Reference[XMPP Transport] |Provides connectivity over the XMPP (Jabber) instant messaging protocol.
|===

#Unable to render \{include} Couldn't find a space with key: MULECDEV#

Was this article helpful? link:/documentation-3.2/statpro-ranking/rank.action?pageId=29425751&useful=true[image:/documentation-3.2/images/icons/emoticons/thumbs_up.gif[yes,title="yes"]] link:/documentation-3.2/statpro-ranking/rank.action?pageId=29425751&useful=false[image:/documentation-3.2/images/icons/emoticons/thumbs_down.gif[no,title="no"]]
