3.6/mule-user-guide/transports-reference.adoc
= Available Transports
:keywords: transports

Following is a list of known transports (also called "providers") for Mule ESB. Some functionality is contained within modules instead of transports--see link:/documentation/display/current/Modules+Reference[Modules Reference]. For more information on transports, see the following topics:

* link:/documentation/display/current/Connecting+Using+Transports[About Transports]
* link:/documentation/display/current/Configuring+a+Transport[Configuring a Transport]
* link:/documentation/display/current/Creating+Transports[Creating Transports]

If you have created a transport for Mule and would like to share it with the Mule community, please mailto:dev@mule.codehaus.org[contact us].

The following list includes some prominent transports from MuleForge (denoted by image:/documentation/download/attachments/122751383/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"]). Transports that are available only in Mule Enterprise are denoted by _*Enterprise*_.

Note that in Mule 3, CXF and Jersey are no longer classed as transports. They are now modules that use an underlying transport (for instance HTTP or HTTPS) to communicate between client ans service.

== Mule Transports

[width="100%",cols="50%,50%",options="header"]
|===
|Transport |Description
|link:/documentation/display/current/AJAX+Transport+Reference[AJAX Transport] |The Mule AJAX connector allows Mule events to be sent and received asynchronously to and from the web browser
|link:/documentation/display/current/EJB+Transport+Reference[EJB Transport] |Allows EJB invocations to be made using outbound endpoints.
|link:/documentation/display/current/Email+Transport+Reference[Email Transport] |This transport supplies various email connectivity options.
|link:/documentation/display/current/File+Transport+Reference[File Transport] |This transport allows files to be read and written to directories on the local file system. The connector can be configured to filter the file it reads and the way files are written, such as whether binary output is used or the file is appended to.
|link:/documentation/display/current/FTP+Transport+Reference[FTP Transport] |Allows files to be read / written to a remote FTP server.
|link:/documentation/display/current/HTTP+Transport+Reference[HTTP Transport] |This transport supplies HTTP transport of Mule messages between applications and other Mule servers.
|link:/documentation/display/current/HTTPS+Transport+Reference[HTTPS Transport] |A secure version of the HTTP transport.
|link:/documentation/display/current/IMAP+Transport+Reference[IMAP Transport] |Connectivity to IMAP mail folders.
|link:/documentation/display/current/IMAP+Transport+Reference[IMAPS Transport] |A secure version of the IMAP transport.
|image:/documentation/download/attachments/122751383/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] JCR Transport |A transport that reads from, writes to, and observes JCR 1.0 containers. This transport is available on MuleForge.

|link:/documentation/display/current/JDBC+Transport+Reference[JDBC Transport] +
_*Enterprise*_ |A transport for JDBC connectivity. Some of its features are available only in Mule Enterprise.
|link:/documentation/display/current/Jetty+Transport+Reference[Jetty Transport] |Provides support for exposing services over HTTP by embedding a light-weight Jetty server. For inbound endpoints only.
|link:/documentation/display/current/Jetty+SSL+Transport[Jetty SSL Transport] |A secure version of the Jetty transport.
|link:/documentation/display/current/JMS+Transport+Reference[JMS Transport] |A Mule transport for JMS connectivity. Mule itself is not a JMS server but can use the services of any JMS 1.1 or 1.02b compliant server such as ActiveMQ and OpenJms, and commercial vendors such as Weblogic, SonicMQ, and more.
|image:/documentation/download/attachments/122751383/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LDAP[LDAP Transport] |Allows you to send and receive Mule Messages to/from an LDAP directory.


image:/documentation/download/attachments/122751383/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LEGSTAR/Home[Legs4Mule Transport] |Provides transformers and connectors for IBM mainframes.
|link:/documentation/display/current/POP3+Transport+Reference[POP3 Transport] |Connectivity to POP3 inboxes.
|link:/documentation/display/current/POP3+Transport+Reference[POP3S Transport] |A secure version of the POP3 transport.
|link:/documentation/display/current/Quartz+Transport+Reference[Quartz Transport] |Provides scheduling facilities with cron / interval definitions and allows Mule events to be scheduled/rescheduled.
|image:/documentation/download/attachments/122751383/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/RESTLET/Home[Restlet Transport] |Allows you to embed Restlet services inside of Mule, use the Restlet client API over Mule, and use URI templates to route messages inside of Mule.

|link:/documentation/display/current/RMI+Transport+Reference[RMI Transport] |Enables events to be sent and received over RMI via JRMP.
|link:/documentation/display/current/Servlet+Transport+Reference[Servlet Transport] |Provides facilities for Mule components to listen for events received via a servlet request. There is also a servlet implementation that uses the Servlet transport to enable REST style services access. This transport is now bundled with the HTTP transport.
|link:/documentation/display/current/SMTP+Transport+Reference[SMTP Transport] |Connectivity to SMTP servers.
|link:/documentation/display/current/SMTP+Transport+Reference[SMTPS Transport] |A secure version of the SMTP transport.
|link:/documentation/display/current/SSL+and+TLS+Transports+Reference[SSL Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/documentation/display/current/STDIO+Transport+Reference[STDIO Transport] |This transport provides connectivity to streams such as `System.in` and `System.out` and is useful for testing.
|link:/documentation/display/current/TCP+Transport+Reference[TCP Transport] |Enables events to be sent and received over TCP sockets.
|link:/documentation/display/current/SSL+and+TLS+Transports+Reference[TLS Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/documentation/display/current/UDP+Transport+Reference[UDP Transport] |Enables events to be sent and received as datagram packets.
|link:/documentation/display/current/VM+Transport+Reference[VM Transport] |Enables event sending and receiving over VM, embedded memory, or persistent queues.
|link:/documentation/display/current/Mule+WMQ+Transport+Reference[WebSphere MQ Transport] +
_*Enterprise*_ |A Mule transport for WebSphere MQ. This transport is available with Mule Enterprise version 1.6 and later.
|link:/documentation/display/current/WSDL+Connectors[WSDL Connectors] |The link:/documentation/display/current/CXF+Module+Reference[CXF Module] allows remote web services to be invoked using their WSDL contract.
|link:/documentation/display/current/XMPP+Transport+Reference[XMPP Transport] |Provides connectivity over the XMPP (Jabber) instant messaging protocol.
|===

== Transport Matrix

[cols=",,,,,,,,,,",options="header"]
|===
|Transport |Doc |Inbound |Outbound |Request |Transactions |Streaming |Retries |MEPs |Default MEP |Maven Artifact
|http://mule.mulesoft.org/display/MULE3USER/AJAX+Transport+Reference[AJAX] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ajax/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ajax/namespace-overview.html[SchemaDoc] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-ajax/[transport:mule-transport-ajax]
|http://mule.mulesoft.org/display/MULE3USER/Axis+Transport+Reference[Axis] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/axis/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_axis/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-axis/[transport:mule-transport-axis]
|http://mule.mulesoft.org/display/MULE3USER/File+Transport+Reference[File] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/file/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_file/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-file/[transport:mule-transport-file]
|http://mule.mulesoft.org/display/MULE3USER/ftp-ee+Transport+Reference[ftp-e] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ftp-ee/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ftp-ee/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |  |  |org.mule.http://transportmule-transport-ftp-ee/[transport:mule-transport-ftp-ee]
|http://mule.mulesoft.org/display/MULE3USER/HTTPS+Transport+Reference[HTTPS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/http/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_https/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-https/[transport:mule-transport-https]
|http://mule.mulesoft.org/display/MULE3USER/IMAPS+Transport+Reference[IMAPS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_imaps/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-imaps/[transport:mule-transport-imaps]
|http://mule.mulesoft.org/display/MULE3USER/jdbc-ee+Transport+Reference[jdbc-ee] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/jdbc-ee/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jdbc-ee/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |  |  |org.mule.http://transportmule-transport-jdbc-ee/[transport:mule-transport-jdbc-ee]
|http://mule.mulesoft.org/display/MULE3USER/Jetty%20SSL+Transport+Reference[Jetty SSL] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/jetty/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jetty%20ssl/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-jetty/[transport:mule-transport-jetty] ssl
|http://mule.mulesoft.org/display/MULE3USER/Multicast+Transport+Reference[Multicast] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/multicast/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_multicast/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-multicast/[transport:mule-transport-multicast]
|http://mule.mulesoft.org/display/MULE3USER/POP3S+Transport+Reference[POP3S] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-pop3s/[transport:mule-transport-pop3s]
|http://mule.mulesoft.org/display/MULE3USER/RMI+Transport+Reference[RMI] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/rmi/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_rmi/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-rmi/[transport:mule-transport-rmi]
|http://mule.mulesoft.org/display/MULE3USER/SFTP+Transport+Reference[SFTP] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/sftp/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_sftp/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |one-way |org.mule.http://transportmule-transport-sftp/[transport:mule-transport-sftp]
|http://mule.mulesoft.org/display/MULE3USER/SMTPS+Transport+Reference[SMTPS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_smtps/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-smtps/[transport:mule-transport-smtps]
|http://mule.mulesoft.org/display/MULE3USER/STDIO+Transport+Reference[STDIO] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/stdio/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_stdio/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way |one-way |org.mule.http://transportmule-transport-stdio/[transport:mule-transport-stdio]
|http://mule.mulesoft.org/display/MULE3USER/TLS+Transport+Reference[TLS] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/ssl/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_tls/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-tls/[transport:mule-transport-tls]
|http://mule.mulesoft.org/display/MULE3USER/VM+Transport+Reference[VM] |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/vm/package-summary.html[JavaDoc]http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_vm/namespace-overview.html[SchemaDoc]
|image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image](XA) |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |one-way |org.mule.http://transportmule-transport-vm/[transport:mule-transport-vm]
|===

== Legend

*Transport* - The name/protocol of the transport +
*Docs* - Links to the JavaDoc and SchemaDoc for the transport +
*Inbound* - Whether the transport can receive inbound events and can be used for an inbound endpoint +
*Outbound* - Whether the transport can produce outbound events and be used with an outbound endpoint +
*Request* - Whether this endpoint can be queried directly with a request call (via MuleClinet or the EventContext) +
*Transactions* - Whether transactions are supported by the transport. Transports that support transactions can be configured in either local or distributed two-phase commit (XA) transaction. +
*Streaming* - Whether this transport can process messages that come in on an input stream. This allows for very efficient processing of large data. For more information, see Streaming. +
*Retry* - Whether this transport supports retry policies. Note that all transports can be configured with Retry policies, but only the ones marked here are officially supported by MuleSoft +
*MEPs* - Message Exchange Patterns supported by this transport +
*Default MEP* - The default MEP for endpoints that use this transport that do not explicitly configure a MEP +
*Maven Artifact* - The group name a artifact name for this transport in http://maven.apache.org/[Maven]
